--- a/Gopaddi/EditMain.storyboard
+++ b/Gopaddi/EditMain.storyboard
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Profile Info View Controller-->
+        <!--Profile InfoVC-->
         <scene sceneID="7d7-K0-7KE">
             <objects>
-                <viewController storyboardIdentifier="ProfileInfoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ft4-Qy-1wg" customClass="ProfileInfoViewController" customModule="Gopaddi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileInfoVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ft4-Qy-1wg" customClass="ProfileInfoVC" customModule="Gopaddi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="88r-mV-fZL">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -37,9 +38,6 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="ArrowLeft"/>
-                                        <connections>
-                                            <action selector="didTapBackbtn:" destination="ft4-Qy-1wg" eventType="touchUpInside" id="nep-Kf-xxm"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -101,9 +99,6 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <size key="freeformSize" width="430" height="1500"/>
-                    <connections>
-                        <outlet property="mainView" destination="88r-mV-fZL" id="xYs-zo-Y8p"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K7q-fq-bEL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
